Corrección en el mensaje de whatsapp y estilos css

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,8 @@ header nav a.activo {
 
 .pie-pagina .grupo-1 .box figure img {
     width: 100px;
+    position: relative;
+    z-index:2;
 }
 
 .pie-pagina .grupo-1 .box h2 {
