--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,9 @@ header nav a.activo {
 /* BACKGROUND PRINCIPAL */  
 
 .background-principal {
-    font-size: 16px;    
+    font-size: 15px;    
     min-height: 40.62em;
-    color: #fff;
+    color: rgb(240, 233, 233);
     background: linear-gradient(rgba(0, 0, 0, 0.5)0%, rgba(0,0,0,.50)100%), url(../img/planet.jpg);
     background-position: center center;
     background-size: cover;
